# chattyrs

./: .gitignore  Cargo.toml  docker-compose.yml
config/: default.toml
scripts/: run.sh
src/: environment.rs  error.rs  handler.rs  lib.rs  main.rs
src/commands/: ask.rs  error.rs  mod.rs  weigh_in.rs
src/llm/: engine.rs  error.rs  mod.rs  model.rs
src/vec_db/: db_handler.rs  mod.rs  vector.rs
