[package]
name = "chattyrs"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.2"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
thiserror = { version = "1.0.61" }
config = { version = "0.14.0" }
serde = { version = "1.0.203", features = ["derive"] }
dotenv = { version = "0.15.0" }
