[package]
name = "chattyrs"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.2", features = ["model"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
thiserror = { version = "1.0.61" }
config = { version = "0.14.0" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.120" }
dotenv = { version = "0.15.0" }
reqwest = { version = "0.12.5", features = ["json"] }
